Container/Kubernetes/k3s-soniiit/Ceph-Rook/dashboard-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: disable-tls-verify
  namespace: rook-ceph
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: rook-ceph-disable-tls-verify@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: ceph.home.soniiit.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: https-dashboard
  tls:
    - hosts:
      - ceph.home.soniiit.net
      secretName: home-soniiit-net-selfsigned-tls
